--- a/package.json
+++ b/package.json
@@ -21,6 +21,61 @@
   "homepage": "https://github.com/xephao/node-core#readme",
   "dependencies": {
     "archiver": "^2.1.1",
-    "express": "^4.16.3"
+    "async": "^2.6.1",
+    "aws-sdk": "^2.255.1",
+    "axios": "^0.18.0",
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.3",
+    "bunyan": "^1.8.12",
+    "convict": "^4.3.0",
+    "countryjs": "^1.8.0",
+    "del": "^3.0.0",
+    "exceljs": "^1.4.13",
+    "express": "^4.16.3",
+    "formidable": "^1.2.1",
+    "google-caja-sanitizer": "^1.0.4",
+    "googleapis": "^32.0.0",
+    "googlemaps": "^1.12.0",
+    "gridfs-stream": "^1.1.1",
+    "helmet": "^3.12.1",
+    "inputmask": "^4.0.0",
+    "jshint": "^2.9.5",
+    "json2csv": "^4.1.3",
+    "libphonenumber-js": "^1.2.15",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "mongodb": "^3.0.10",
+    "mongoose": "^5.1.5",
+    "mssql": "^4.1.0",
+    "mysql": "^2.15.0",
+    "nodemailer": "^4.6.6",
+    "pdf2json": "^1.1.7",
+    "pg": "^7.4.3",
+    "react": "^16.4.0",
+    "react-async-script": "^0.9.1",
+    "react-bootstrap-table": "^4.3.1",
+    "react-chartjs-2": "^2.7.2",
+    "react-cookie": "^2.1.6",
+    "react-dom": "^16.4.0",
+    "react-google-recaptcha": "^0.12.0",
+    "react-input-mask": "^2.0.2",
+    "react-jquery-datatables": "^1.0.0",
+    "react-textarea-autosize": "^6.1.0",
+    "react-transition-group": "^2.3.1",
+    "recaptcha-verify": "^0.1.1",
+    "request": "^2.87.0",
+    "semantic-ui": "^2.3.1",
+    "set-cookie-parser": "^2.2.0",
+    "socket.io-client": "^2.1.1",
+    "sprintf-js": "^1.1.1",
+    "uuid": "^3.2.1",
+    "webpack": "^4.12.0",
+    "xlsx": "^0.13.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "json-loader": "^0.5.7",
+    "nodemon": "^1.17.5"
   }
 }
