--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/xephao/node-core#readme",
   "dependencies": {
-    "ajv": "^6.5.1",
     "archiver": "^2.1.1",
     "async": "^2.6.1",
     "aws-sdk": "^2.255.1",
@@ -28,7 +27,6 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "bunyan": "^1.8.12",
-    "chart.js": "^2.7.2",
     "convict": "^4.3.0",
     "countryjs": "^1.8.0",
     "del": "^3.0.0",
@@ -72,7 +70,36 @@
     "sprintf-js": "^1.1.1",
     "uuid": "^3.2.1",
     "webpack": "^4.12.0",
-    "xlsx": "^0.13.0"
+    "xlsx": "^0.13.0",
+    "babel-polyfill": "6.23.0",
+    "chalk": "^1.1.3",
+    "compression": "1.6.2",
+    "cross-env": "5.0.0",
+    "express": "4.15.3",
+    "fontfaceobserver": "2.0.9",
+    "history": "4.6.3",
+    "hoist-non-react-statics": "2.1.1",
+    "immutable": "3.8.1",
+    "intl": "1.2.5",
+    "invariant": "2.2.2",
+    "ip": "1.1.5",
+    "minimist": "1.2.0",
+    "prop-types": "15.5.10",
+    "react-helmet": "5.1.3",
+    "react-intl": "2.3.0",
+    "react-loadable": "4.0.3",
+    "react-redux": "5.0.5",
+    "react-router-dom": "4.1.1",
+    "react-router-redux": "5.0.0-alpha.6",
+    "redux": "3.6.0",
+    "redux-immutable": "4.0.0",
+    "redux-saga": "0.15.3",
+    "reselect": "3.0.1",
+    "sanitize.css": "4.1.0",
+    "styled-components": "2.0.0",
+    "warning": "3.0.0",
+    "whatwg-fetch": "2.0.3" 
+
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
